# app/Http/Controllers/AirtimeController.php
@@ -32,7 +32,40 @@ class AirtimeController extends Controller
      * @OA\Get(
      *     path="/vend/recharge",
      *     summary="buy airtime",
-     *     tags={"Users"},
+     *     tags={"Airtime"},
+     *     description="Endpoint for purchasing airtime, either from Bap or Shago Services",
+        * @OA\Parameter(
+        *         name="phone_number",
+        *         in="query",
+        *         required=true,
+        *         description="The phone number to recharge (format: 07012345678)",
+        *         @OA\Schema(
+        *             type="string",
+        *             example="07065788819"
+        *         )
+        *     ),
+        *     @OA\Parameter(
+        *         name="amount",
+        *         in="query",
+        *         required=true,
+        *         description="The amount of airtime to purchase (in NGN)",
+        *         @OA\Schema(
+        *             type="number",
+        *             format="float",
+        *             example=100.00
+        *         )
+        *     ),
+        *     @OA\Parameter(
+        *         name="service_type",
+        *         in="query",
+        *         required=true,
+        *         description="The network provider for the airtime (e.g., MTN, AIRTEL, GLO, 9MOBILE)",
+        *         @OA\Schema(
+        *             type="string",
+        *             enum={"MTN", "GLO"},
+        *             example="MTN"
+        *         )
+        *     ),
      *     @OA\Response(response=200, description="Successful operation"),
      *     @OA\Response(response=400, description="Invalid request")
      * )
@@ -47,11 +80,17 @@ class AirtimeController extends Controller
                 (new BapAirtimeRequest)->rules()
             );
 
+            $response = $this->airtimeRepository->vend($validated);
+
         } else if($request->has('airtime')) {
             //
         }
 
-        $response = $this->airtimeRepository->vend($validated);
-        return $response;
+        return response()->json(
+            [   
+                'success' => true,
+                'data' => $response,
+                'message' => 'Airtime was successfully purchased'
+            ],200);
     }
 }
